[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites.tscn" type="PackedScene" id=1]
[ext_resource path="res://FireGremlins.gd" type="Script" id=2]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://AreaOfEffect.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Hiet.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 69.1994

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="CapsuleShape2D" id=4]
radius = 2.43699
height = 2.40788

[node name="FireGremlins" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="colored_transparent" parent="." instance=ExtResource( 1 )]
position = Vector2( -0.133671, 0.476797 )
frame = 25

[node name="colored_transparent" parent="colored_transparent" instance=ExtResource( 1 )]
position = Vector2( 0.43469, -8.77437 )
scale = Vector2( 0.598401, 0.662657 )
frame = 495

[node name="Timer" type="Timer" parent="."]

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 4
collision_mask = 34

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 1 )

[node name="AreaOfEffect" parent="." instance=ExtResource( 4 )]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" parent="AreaOfEffect" index="0"]
shape = SubResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
collision_layer = 64
collision_mask = 16

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -0.238888, 0.300298 )
shape = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.427185, 5.12622 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="Hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="AreaOfEffect" to="." method="_on_AreaOfEffect_area_entered"]
[connection signal="area_exited" from="AreaOfEffect" to="." method="_on_AreaOfEffect_area_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]

[editable path="Hurtbox"]

[editable path="AreaOfEffect"]

[editable path="Hitbox"]
